--- a/OctagonPlatform/Content/DataTables/css/dataTables.bootstrap.css
+++ b/OctagonPlatform/Content/DataTables/css/dataTables.bootstrap.css
@@ -52,6 +52,7 @@ div.dataTables_wrapper div.dataTables_paginate {
   margin: 0;
   white-space: nowrap;
   text-align: right;
+  font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
 }
 div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   margin: 2px 0;
