--- a/OctagonPlatform/Content/DataTables/css/dataTables.bootstrap.css
+++ b/OctagonPlatform/Content/DataTables/css/dataTables.bootstrap.css
@@ -37,6 +37,7 @@ div.dataTables_wrapper div.dataTables_filter label {
   white-space: nowrap;
   font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
   text-align: left;
+  padding-bottom: 10px
 }
 div.dataTables_wrapper div.dataTables_filter input {
   margin-left: 0.5em;
