--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -252,7 +252,7 @@
                         @Html.ValidationMessageFor(m => m.MinAmmountCash)
                     </div>
                     
-                    <div class="form-group">
+              <!--    <div class="form-group">
                         <label class="control-label">Input addons</label>
                         <div class="form-group">
                             <label class="sr-only" for="exampleInputAmount">Amount</label>
@@ -262,7 +262,7 @@
                                 <div class="input-group-addon">.00</div>
                             </div>
                         </div>
-                    </div>
+                    </div>   --> 
 
                 </div>
             </div>
