--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -247,7 +247,7 @@
                             @Html.ValidationMessageFor(m => m.Balance)
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.MinAmmountCash, htmlAttributes: new { data_toggle = "tooltip", title = "Set terminal's minimum cash amount" })
+                        @Html.LabelFor(m => m.MinAmmountCash, htmlAttributes: new { data_toggle = "tooltip", title = "Set terminal minimum cash amount" })
                         <i>@Html.TextBoxFor(m => m.MinAmmountCash, new { @class = "form-control", autofocus = "autofocus", placeholder = "Minimum Cash Balance", id = "PlaceHolderForm" })</i>
                         @Html.ValidationMessageFor(m => m.MinAmmountCash)
                     </div>
