--- a/OctagonPlatform/Views/Error/NotFoundError.cshtml
+++ b/OctagonPlatform/Views/Error/NotFoundError.cshtml
@@ -2,13 +2,14 @@
     ViewBag.Title = "NotFoundError";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
-<div class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px"></div>
-<div class="form-group" style="margin-top: 10px;">
-    <h1 style="text-align:center;font-size: 102px;">Error 404...!</h1>
-    <h2 style="text-align:center;margin-top: -20px;">The page you're looking for doesn't exist.</h2>
-    <div style="margin-left: 288px;"><img src="~/Octagon/assets/img/404.jpg" /></div>
-    <h2 class="alert-danger">@ViewBag.Error </h2>
-</div>
-<div class="form-group" style="text-align: center;">
-    <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:#00a8e1; color: white;">Home page</button>
+<div class="container" style=" padding-bottom: 20px; padding-top: 20px">
+    <div class="form-group" style="margin-top: 10px;">
+        <h1 style="text-align:center;font-size: 102px;">Error 404...!</h1>
+        <h2 style="text-align:center;margin-top: -20px;">The page you're looking for doesn't exist.</h2>
+        <div style="margin-left: 288px;"><img src="~/Octagon/assets/img/404.jpg" /></div>
+        <h2 class="alert-danger">@ViewBag.Error </h2>
+    </div>
+    <div class="form-group" style="text-align: center;">
+        <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:#00a8e1; color: white;">Back</button>
+    </div>
 </div>
