--- a/OctagonPlatform/Views/Partners/Modals/DeletePartner.cshtml
+++ b/OctagonPlatform/Views/Partners/Modals/DeletePartner.cshtml
@@ -15,7 +15,7 @@
                     <input type="hidden" id="itemId" name="id" value="" />
                     <div class="form-group">
                         <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
-                        <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                        <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
                     </div>
                 }
             </div>
