--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -222,7 +222,7 @@ Ignored Alerts <br />
     </div>
 </div>
 
-<div id="ModalAddWorkingHours" class="modal fade" role="dialog">
+<div id="" class="modal fade" role="dialog">ModalAddWorkingHours
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
