--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -1,7 +1,7 @@
 ﻿
 
 a {
-    font-family: "Helvetica Neue", Helvetica,
+    font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
 }
 
 
