--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -7,7 +7,8 @@
 }
 <div class="container" style="padding-bottom: 20px">
     <div class="buttonterminal">
-        <h1 class="page-header" style="color: #859298; font-size:30px;"> <i class="fa fa-desktop" style="font-size:25px;color:#859298"></i> Terminals</h1>
+        <h1 class="page-header" style="color: #859298; font-size:30px;"><i class="fa fa-desktop" style="font-size:25px;color:#859298"></i> Terminals</h1>
+        
         @Html.ActionLink(
             linkText: "Add",
             actionName: "Create",
@@ -18,6 +19,12 @@
             },
             htmlAttributes: new {@class= "btn btn-primary"}
             )
+        <p>
+            <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-tower"></span> Plus
+            </button>
+        </p>
+        </p> 
     </div>
     <br>
 
