--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -21,7 +21,7 @@
             )
         <p>
             <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-tower"></span> Plus
+                <span class="fa fa-plus-circle"></span> Plus
             </button>
         </p>
         </p> 
