--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -6,10 +6,11 @@
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 <div class="container" style="padding-bottom: 20px">
-    <div class="buttonterminal">
-        <h1 class="page-header" style="color: #859298; font-size:30px;"><i class="fa fa-desktop" style="font-size:25px;color:#859298"></i> Terminals</h1>
-        
-        @Html.ActionLink(
+    <div class="row">
+        <div class="col-md-6" style="width: 192px;">
+            <h1 class="page-header" style="color: #859298; font-size:30px;"><i class="fa fa-desktop" style="font-size:25px;color:#859298"></i> Terminals</h1>
+
+            @Html.ActionLink(
             linkText: "Add",
             actionName: "Create",
             controllerName: "Terminals",
@@ -17,55 +18,58 @@
             {
                 partnerId = int.Parse(Session["partnerId"].ToString())
             },
-            htmlAttributes: new {@class= "btn btn-primary"}
+            htmlAttributes: new { @class = "btn btn-primary" }
             )
-        <p>
-            <button type="button" class="btn btn-default btn-sm">
-                <span class="fa fa-plus-circle"></span> Plus
-            </button>
-        </p>
-        </p> 
+            </div>
+            <div class="col-md-6">
+                <p>
+                    <button type="button" class="btn btn-default btn-sm" style="margin-top: 45px;">
+                        <span class="fa fa-plus-circle" style="font-size: 17px;"></span> Add
+                    </button>
+                </p>
+        </div>
     </div>
     <br>
 
     <div class="alert-info">
         <strong>@ViewBag.Error</strong>
     </div>
-    
+
     <table id="terminals" class="table table-striped table-hover table-bordered">
         <thead class="thead-blue">
-        <tr>
-            <th>ID</th>
-            <th>Partner</th>
-            <th>Location</th>
-            <th>Address</th>
-            <th>Phone</th>
-            <!--          <th>Country</th>
-            <th>City</th>
-            <th>State</th> -->
-            <th>Status</th>
-            <th>Balance</th>
-            <th>Edit</th>
-            <th>Delete</th>
-            <!--          <th>Details</th>         -->
+            <tr>
+                <th>ID</th>
+                <th>Partner</th>
+                <th>Location</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <!--          <th>Country</th>
+                <th>City</th>
+                <th>State</th> -->
+                <th>Status</th>
+                <th>Balance</th>
+                <th>Edit</th>
+                <th>Delete</th>
+                <!--          <th>Details</th>         -->
 
-        </tr>
+            </tr>
         </thead>
-    
+
         <tbody id="listOfTerminals">
 
-        @foreach (var item in Model)
-        {
-            <tr>              
-                <td>@Html.ActionLink(item.TerminalId, "Details", new { id = item.Id })</td>
-                <td>@item.Partner.BusinessName</td>
-                <td>@item.LocationType.Name</td>
-                <td>@item.Address1, @item.City.Name, @item.State.Name, @item.Zip</td>
-                <td>@item.Phone</td>
-                @*    <td>@item.Country.Name</td>
-                <td>@item.City.Name</td>
-                <td>@item.State.Name</td> *@
-                <td>@if (item.Status.ToString().Equals("Active"))
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(item.TerminalId, "Details", new { id = item.Id })</td>
+                    <td>@item.Partner.BusinessName</td>
+                    <td>@item.LocationType.Name</td>
+                    <td>@item.Address1, @item.City.Name, @item.State.Name, @item.Zip</td>
+                    <td>@item.Phone</td>
+                    @*    <td>@item.Country.Name</td>
+                        <td>@item.City.Name</td>
+                        <td>@item.State.Name</td> *@
+                    <td>
+                        @if (item.Status.ToString().Equals("Active"))
                     {
                         <strong class="text-success">
                             @item.Status
@@ -84,31 +88,34 @@
                         </strong>
                     }
                 </td>
-                <td>@if (item.Balance.ToString().Equals(""))
-                    {
-                        <p>$0.00</p>
-                    }
-                    else
-                    {
+                <td>
+                    @if (item.Balance.ToString().Equals(""))
+                {
+                    <p>$0.00</p>
+                }
+                else
+                {
 
-                        <p>$@item.Balance</p>
-                    }
-                </td>                
-                <td>
-                    <i class="fa fa-pencil"style="font-size: 16px; color: darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
-                </td>
-                <td>
-                    @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
-                    <i class="fa fa-trash"style="font-size: 16px; color: red"></i><button type="button" style="margin: -2px;" value="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
-                </td>
-                @*  <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td> *@
-            </tr>
-        }
+                    <p>$@item.Balance</p>
+                }
+            </td>
+            <td>
+                <i class="fa fa-pencil" style="font-size: 16px; color: darkblue"></i> @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+            </td>
+            <td>
+                @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
+                <i class="fa fa-trash" style="font-size: 16px; color: red"></i><button type="button" style="margin: -2px;" value="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
+            </td>
+            @*  <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td> *@
+        </tr>
+            }
         </tbody>
 
     </table>
 
 </div>
+
+
 
 @Html.Partial("Modals/DeleteTerminalModal")
 
