--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -6,7 +6,7 @@
 @*@Styles.Render("~/Content/bootstrap-lumen.css")*@
 
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12" style="width:500px">
             <h1 class="page-header" style="color: #859298; font-size:30px;"> <i class="fa fa-dashboard" style="font-size:25px;color:#859298"></i> Dashboard</h1>
             <a href="https://www.accuweather.com/en/us/miami-fl/33128/weather-forecast/347936" class="aw-widget-legal">
                 <!--
