--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -38,57 +38,86 @@
     <table id="partners" class="table table-striped table-hover table-bordered">
 
         <thead class="thead-blue">
-        <tr>
+            <tr>
 
-            <th>Business Name</th>
-            <th>Parent</th>
-            <th>Address</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Status</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
+                <th>Business Name</th>
+                <th>Parent</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Status</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>@Html.ActionLink(Model.BusinessName, "Details", routeValues: new {id = Model.Id})</td>
-            <td>@Model.Parent.BusinessName</td>
-            <td>@Model.Address1</td>
-            <td>@Model.Mobile</td>
-            <td>@Model.Email</td>
-            <td>@Model.Status</td>
-            <td>
-                <i class="fa fa-pencil"style="color: darkblue; font-size: 16px;"></i> @Html.ActionLink("Edit", "Edit", new {id = Model.Id})</td>
-            <td>
-                <i class="fa fa-trash" style="color: red; font-size: 16px;"></i><button type="button" style="margin: -2px;" value="@Model.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeletePartner">Delete</button>
-            </td>
-        </tr>
-        @foreach (var item in Model.Partners)
-        {
-            if (!item.Deleted && item.Id != Model.Id)
+            <tr>
+                <td>@Html.ActionLink(Model.BusinessName, "Details", routeValues: new { id = Model.Id })</td>
+                <td>@Model.Parent.BusinessName</td>
+                <td>@Model.Address1</td>
+                <td>@Model.Mobile</td>
+                <td>@Model.Email</td>
+                <td>@Model.Status</td>
+                <td>
+                    <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;"></i> @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+                </td>
+                <td>
+                    <i class="fa fa-trash" style="color: red; font-size: 16px;"></i>
+                    <button type="button" style="margin: -2px;" data-id="@Model.Id" id="deleteItem" class="btn-link WorkingHoursEdit2" data-toggle="modal" data-target="#DeletePartner">
+                    Delete</button>
+                </td>
+            </tr>
+            @foreach (var item in Model.Partners)
             {
-                <tr>
-                    <td>@Html.ActionLink(item.BusinessName, "Details", routeValues:new {item.Id})</td>
-                    <td>@item.Parent.BusinessName</td>
-                    <td>@item.Address1</td>
-                    <td>@item.Mobile</td>
-                    <td>@item.Email</td>
-                    <td>@item.Status</td>
-                    <td>
-                        <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;";></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
-                    </td>
-                    <td>
-                        <i class="fa fa-trash"style="color: red; font-size: 16px;"></i><button type="button" style="margin: -2px;" value="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeletePartner">Delete</button>
-                    </td>
-                </tr>
+                if (!item.Deleted && item.Id != Model.Id)
+                {
+                    <tr>
+                        <td>@Html.ActionLink(item.BusinessName, "Details", routeValues: new { item.Id })</td>
+                        <td>@item.Parent.BusinessName</td>
+                        <td>@item.Address1</td>
+                        <td>@item.Mobile</td>
+                        <td>@item.Email</td>
+                        <td>@item.Status</td>
+                        <td>
+                            <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;" ;></i> @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        </td>
+                        <td>
+                            <i class="fa fa-trash" style="color: red; font-size: 16px;"></i>
+                            <button type="button" style="margin: -2px;" data-id="@item.Id" id="deleteItem" class="btn-link WorkingHoursEdit" data-toggle="modal" data-target="#DeletePartner">Delete</button>
+                        </td>
+                    </tr>
+                }
             }
-        }
         </tbody>
     </table>
 </div>
+<div id="DeletePartner" class="modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Delete Terminal</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this partner? </p>
+            </div>
+            <div class="modal-footer">
+                @using (Html.BeginForm("Delete", "Partners", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
-@Html.Partial("Modals/DeletePartner")
+                    @Html.Hidden("id")
+                    <input type="hidden" id="id" name="id" value="" />
+                    <div class="form-group">
+                        <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                        <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+@*@Html.Partial("Modals/DeletePartner")*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/search")
@@ -97,17 +126,22 @@
 
         var jQuery_1_10_2 = $.noConflict(true);
 
-        jQuery_1_10_2(function() {
+        jQuery_1_10_2(function () {
             $("#partners").DataTable();
         });
     </script>
 
+<script>
+      $(document).on("click", ".WorkingHoursEdit", function () {
+          var id = $(this).data('id');
+          $("#DeletePartner #id").val(id);
+      });
+</script>
+
     <script>
-        $(document).ready(function() {
-            $("#confirm").click(function() {
-                var id = $("#deleteItem").val();
-                $("#itemId").val(id);
-            });
+        $(document).on("click", ".WorkingHoursEdit2", function () {
+            var id = $(this).data('id');
+            $("#DeletePartner #id").val(id);
         });
     </script>
 
