--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -13,15 +13,15 @@
             </h1>
 
             @* @Html.ActionLink(
-    linkText: "Add",
-    actionName: "Create",
-    controllerName: "Terminals",
-    routeValues: new
-    {
-        partnerId = int.Parse(Session["partnerId"].ToString())
-    },
-    htmlAttributes: new { @class = "btn btn-primary" }
-    ) *@
+                linkText: "Add",
+                actionName: "Create",
+                controllerName: "Terminals",
+                routeValues: new
+                {
+                    partnerId = int.Parse(Session["partnerId"].ToString())
+                },
+                htmlAttributes: new { @class = "btn btn-primary" }
+                ) *@
         </div>
         <div class="col-md-6" style="margin-top: 43px;">
             <a type="button" href="@Url.Action("Create", "Terminals",
@@ -43,77 +43,77 @@
 
     <table id="terminals" class="table table-striped table-hover table-bordered">
         <thead class="thead-blue">
-        <tr>
-            <th>ID</th>
-            <th>Partner</th>
-            <th>Location</th>
-            <th>Address</th>
-            <th>Phone</th>
-            <!-- <th>Country</th>
-            <th>City</th>
-            <th>State</th> -->
-            <th>Status</th>
-            <th>Balance</th>
-            <th>Edit</th>
-            <th>Delete</th>
-            <!-- <th>Details</th> -->
+            <tr>
+                <th>ID</th>
+                <th>Partner</th>
+                <th>Location</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <!-- <th>Country</th>
+                <th>City</th>
+                <th>State</th> -->
+                <th>Status</th>
+                <th>Balance</th>
+                <th>Edit</th>
+                <th>Delete</th>
+                <!-- <th>Details</th> -->
 
-        </tr>
+            </tr>
         </thead>
 
         <tbody id="listOfTerminals">
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@Html.ActionLink(item.TerminalId, "Details", new {id = item.Id})</td>
-                <td>@item.Partner.BusinessName</td>
-                <td>@item.LocationType.Name</td>
-                <td>@item.Address1, @item.City.Name, @item.State.Name, @item.Zip</td>
-                <td>@item.Phone</td>
-                @*    <td>@item.Country.Name</td>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(item.TerminalId, "Details", new { id = item.Id })</td>
+                    <td>@item.Partner.BusinessName</td>
+                    <td>@item.LocationType.Name</td>
+                    <td>@item.Address1, @item.City.Name, @item.State.Name, @item.Zip</td>
+                    <td>@item.Phone</td>
+                    @*    <td>@item.Country.Name</td>
                         <td>@item.City.Name</td>
                         <td>@item.State.Name</td> *@
-                <td>
-                    @if (item.Status.ToString().Equals("Active"))
-                    {
-                        <strong class="text-success">
-                            @item.Status
-                        </strong>
-                    }
-                    else if (item.Status.ToString().Equals("Inactive"))
-                    {
-                        <strong class="text-danger">
-                            @item.Status
-                        </strong>
-                    }
-                    else
-                    {
-                        <strong class="text-warning">
-                            @item.Status
-                        </strong>
-                    }
-                </td>
-                <td>
-                    @if (item.Balance.ToString().Equals(""))
-                    {
-                        <p>$0.00</p>
-                    }
-                    else
-                    {
-                        <p>$@item.Balance</p>
-                    }
-                </td>
-                <td>
-                    <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
-                </td>
-                <td>
-                    @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
-                    <i class="fa fa-trash" style="color: red; font-size: 16px;"></i><button type="button" style="margin: -2px;" value="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
-                </td>
-                @*  <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td> *@
-            </tr>
-        }
+                    <td>
+                        @if (item.Status.ToString().Equals("Active"))
+                        {
+                            <strong class="text-success">
+                                @item.Status
+                            </strong>
+                        }
+                        else if (item.Status.ToString().Equals("Inactive"))
+                        {
+                            <strong class="text-danger">
+                                @item.Status
+                            </strong>
+                        }
+                        else
+                        {
+                            <strong class="text-warning">
+                                @item.Status
+                            </strong>
+                        }
+                    </td>
+                    <td>
+                        @if (item.Balance.ToString().Equals(""))
+                        {
+                            <p>$0.00</p>
+                        }
+                        else
+                        {
+                            <p>$@item.Balance</p>
+                        }
+                    </td>
+                    <td>
+                        <i class="fa fa-pencil" style="color: darkblue; font-size: 16px;"></i> @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    </td>
+                    <td>
+                        @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
+                        <i class="fa fa-trash" style="color: red; font-size: 16px;"></i><button type="button" style="margin: -2px;" data-id="@item.Id" id="deleteItem" class="btn-link WorkingHoursEdit2" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
+                    </td>
+                    @*  <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td> *@
+                </tr>
+            }
         </tbody>
 
     </table>
@@ -121,26 +121,51 @@
 </div>
 
 
-@Html.Partial("Modals/DeleteTerminalModal")
+@*@Html.Partial("Modals/DeleteTerminalModal")*@
+<div id="DeleteTerminalModal" class="modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Delete Terminal</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this terminal? </p>
+            </div>
+            <div class="modal-footer">
+                @using (Html.BeginForm("Delete", "Terminals", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.Hidden("id")
+                    <input type="hidden" id="itemId" name="id" value="" />
+                    <div class="form-group">
+                        <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
+                        <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+
     <script>
 
         var jQuery_1_10_2 = $.noConflict(true);
 
-        jQuery_1_10_2(function() {
+        jQuery_1_10_2(function () {
             $("#terminals").DataTable();
         });
     </script>
 
     <script>
-        $(document).ready(function() {
-            $("#confirm").click(function() {
-                var id = $("#deleteItem").val();
-                $("#itemId").val(id);
-            });
+        $(document).on("click", ".WorkingHoursEdit2", function () {
+            var id = $(this).data('id');
+            $("#DeleteTerminalModal #id").val(id);
         });
     </script>
 }
