--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-6" style="width: 200px;">
             <h1 class="page-header" style="color: #859298; font-size:30px;"> <i class="fa fa-group" style="font-size:25px;color:#859298"></i> Partners</h1>
-            @Html.ActionLink(
+    @*        @Html.ActionLink(
         "Add Partner",
         "Create",
         "Partners",
@@ -19,15 +19,19 @@
             partnerId = int.Parse(Session["partnerId"].ToString())
         },
         new { @class = "btn btn-primary" }
-        )
+        ) *@
         </div>
 
-        <div class="col-md-6">
-            <p>
-                <button type="button" class="btn btn-default btn-sm" style="margin-top: 45px;">
-                    <span class="fa fa-plus-circle" style="font-size: 17px;"></span> Add
-                </button>
-            </p>
+        <div class="col-md-6" style="margin-top: 43px;">
+            <a type="button" href="@Url.Action("Create", "Partners",
+                                       new
+                                       {
+                                           partnerId = int.Parse(Session["partnerId"].ToString())
+                                       })"
+               class="btn btn-default btn-sm">
+                <span class="fa fa-plus-circle"></span>
+                Add
+            </a>
         </div>
     </div>
     <div class="alert-info">
