salva para deshacer. borrando el modelo de trasacciones viejas y crenado una nueva con el modelo referenciado al API totalmente

--- a/OctagonPlatform/Views/Disputes/Index.cshtml
+++ b/OctagonPlatform/Views/Disputes/Index.cshtml
@@ -6,7 +6,17 @@
 }
 
 <h2>Index</h2>
-
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p><p>
+    @Html.ActionLink("Create New", "Create")
+</p><p>
+    @Html.ActionLink("Create New", "Create")
+</p><p>
+    @Html.ActionLink("Create New", "Create")
+</p><p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
