--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("Index", "Disputes")">
-                        <i class="fa fa-flag fa-fw"></i> Alerts
+                        <i class="fa fa-flag fa-fw"></i> Disputes
                     </a>
                 </li>
             </ul>
