add crete to disoute

--- a/OctagonPlatform/Views/Disputes/Create.cshtml
+++ b/OctagonPlatform/Views/Disputes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.Dispute
+﻿@model OctagonPlatform.Models.FormsViewModels.DisputeViewModel
 
 @{
     ViewBag.Title = "Create";
