--- a/OctagonPlatform/Views/Logos/Index.cshtml
+++ b/OctagonPlatform/Views/Logos/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
+    ViewBag.Title = "Logos";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
+
 
 <h3 class="alert-info">Upload Logo</h3>
 <h4 class="alert-warning">@ViewBag.Error</h4>
