--- a/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
+++ b/OctagonPlatform/Views/Surcharge/SurchargeForm.cshtml
@@ -1,8 +1,8 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.SurchargeFormViewModel
 
 @{
-    ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
+    ViewBag.Title = "Surcharge Form";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
 <h3 class="alert-info">Surcharge</h3>
