--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -141,11 +141,11 @@
 
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
-                <div id="PartnerDetailButtons" class="panel-heading">
+                <div id="interChangeButtons" class="panel-heading">
                     <div id="interchanges">
                         @Html.Partial("Sections/Interchanges", Model)
 
-                        <div id="getSurcharge" class="panel-collapse collapse">
+                        <div id="getInterchange" class="panel-collapse collapse">
                             <div class="loader"></div>
                         </div>
                     </div>
