--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -1,1 +1,97 @@
-﻿<h3>Interchanges Splits</h3>
+﻿@model OctagonPlatform.Models.Terminal
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    @Html.ActionLink(
+                        linkText: "Add Interchange",
+                        actionName: "Create",
+                        controllerName: "InterChange",
+                        routeValues: new
+                        {
+                            terminalId = Model.Id
+                        },
+                        htmlAttributes: null
+                        )
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+</nav>
+
+<p class="alert alert-info">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    <thead>
+    <tr>
+
+        <th>BankAccount</th>
+        <th>BankName</th>
+        <th>Split Amount</th>
+        <th>Effective Date</th>
+        <th>Stop Date</th>
+
+    </tr>
+    </thead>
+
+    @if (Model != null)
+    {
+
+        foreach (var item in Model.InterChanges)
+        {
+            <tbody>
+            <tr>
+                <td>@item.BankAccount.NickName</td>
+                <td>@item.BankAccount.BankName</td>
+                <td>@item.SplitAmount</td>
+                <td>@item.StartDate.ToShortDateString()</td>
+                <td>@item.StopDate.ToShortDateString()</td>
+                <td>
+                    <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "InterChange",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )
+                </td>
+                <td>
+                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
+                                                                 controllerName: "InterChange",
+                                                                 routeValues: new
+                                                                 {
+                                                                     id = item.Id
+                                                                 },
+                                                                 htmlAttributes: null)
+                </td>
+
+            </tr>
+
+
+            </tbody>
+
+        }
+    }
+
+
+
+</table>
+
+
+
+@section Scripts {
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+}
+
+
+
