--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -133,7 +133,7 @@
                 <div id="PartnerDetailButtons" class="panel-heading">
                     <h3 class="texth3"><i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Surcharges", "Index", "Surcharge", new { terminalId = Model.Id }, new AjaxOptions { UpdateTargetId = "getSurcharge", LoadingElementId = "loading5", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getSurcharge" })</h3>
                     <div id="getSurcharge" class="panel-collapse collapse">
-                        <<div class="loader"></div>
+                        <div class="loader"></div>
                     </div>
                 </div>
             </div>
@@ -141,15 +141,14 @@
 
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
-                <div id="interChangeButtons" class="panel-heading">
-                    <div id="interchanges">
-                        @Html.Partial("Sections/Interchanges", Model)
-
-                        <div id="getInterchange" class="panel-collapse collapse">
+                <div id="Interchanges" class="panel-heading">
+                    
+                    <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a class="hover"><h3 data-toggle="collapse" data-target="#getInterchange">Interchanges @Html.Partial("Sections/Interchanges", Model)</h3></a>
+                 
+                        <div id="" class="panel-collapse collapse">
                             <div class="loader"></div>
                         </div>
-                    </div>
-                </div>
+</div>
             </div>
         </div>
 
