--- a/OctagonPlatform/Views/VaultCash/Index.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Index.cshtml
@@ -89,6 +89,7 @@
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+   @* @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
 
     <script>
 
