--- a/OctagonPlatform/Views/Surcharge/Index.cshtml
+++ b/OctagonPlatform/Views/Surcharge/Index.cshtml
@@ -1,42 +1,38 @@
 ﻿@model IEnumerable<OctagonPlatform.Models.Surcharge>
     
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    @Html.ActionLink(
-                        linkText: "Add Surcharge",
-                        actionName: "Create",
-                        controllerName: "Surcharge",
-                        routeValues: new
-                        {
-                            terminalId = ViewBag.TerminalId
-                        },
-                        htmlAttributes: null
-                        )
-                </li>
-            </ul>
-            
-        </div>
+@{
+    Layout = "~/Views/Shared/_LayoutEdits.cshtml";
+}
 
-    </div>
-</nav>
 
-<p class="alert alert-info">
-    <strong>@ViewBag.Error</strong>
-</p>
-<table class="table table-striped table-hover ">
-    <thead>
-    <tr>
-        
+<div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
+    @Html.ActionLink(
+        linkText: "Add Surcharge",
+        actionName: "Create",
+        controllerName: "Surcharge",
+        routeValues: new
+        {
+            terminalId = ViewBag.TerminalId
+        },
+        htmlAttributes: null
+        )
+</div>
+
+
+@*<p class="alert alert-info">
+        <strong>@ViewBag.Error</strong>
+    </p>
+*@
+
+<table id="surcharges" class="table table-striped table-hover table-bordered">
+    <thead class="thead-blue">
+    <tr>    
         <th>BankAccount</th>
         <th>BankName</th>
         <th>Split Amount</th>
         <th>Split Percentage</th>
         <th>Effective Date</th>
         <th>Stop Date</th>
-
     </tr>
     </thead>
 
@@ -90,8 +86,15 @@
 </table>
 
 
+@section Scripts{
+@*    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
+    @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+<script>
+        var jQuery_1_10_2 = $.noConflict(true);
 
-@section Scripts {
-    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+        jQuery_1_10_2(function() {
+            $("#surcharges").DataTable();
+        });
+</script>
 }
 
