--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -89,9 +89,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/search")
     @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+   @* @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js") *@
 
     <script>
-
         var jQuery_1_10_2 = $.noConflict(true);
 
         jQuery_1_10_2(function() {
