--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -1,43 +1,39 @@
 ﻿@model OctagonPlatform.Models.Terminal
 
+@{
+    Layout = "~/Views/Shared/_LayoutEdits.cshtml";
+}
 
 <div id="getInterchange" class="panel-collapse collapse">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        @Html.ActionLink(
-                            linkText: "Add Interchange",
-                            actionName: "Create",
-                            controllerName: "InterChange",
-                            routeValues: new
-                            {
-                                terminalId = Model.Id
-                            },
-                            htmlAttributes: null
-                            )
-                    </li>
-                </ul>
-
-            </div>
-
-        </div>
-    </nav>
-
+    
+                <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
+                    @Html.ActionLink(
+                        linkText: "Add Interchange",
+                        actionName: "Create",
+                        controllerName: "InterChange",
+                        routeValues: new
+                        {
+                            terminalId = Model.Id
+                        },
+                        htmlAttributes: null
+                        )
+                </div>  
+@*
     <p class="alert alert-info">
         <strong>@ViewBag.Error</strong>
     </p>
-    <table class="table table-striped table-hover ">
-        <thead>
-        <tr>
+*@    
 
+    <table id="interchanges" class="table table-striped table-hover table-bordered">
+        <thead class="thead-blue">
+        <tr>
             <th>BankAccount</th>
             <th>BankName</th>
             <th>Split Amount</th>
             <th>Effective Date</th>
             <th>Stop Date</th>
-
+            <th>Edit</th>
+            <th>Delete</th>
         </tr>
         </thead>
 
@@ -111,6 +107,7 @@
 
     @section Scripts {
         @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+        @Scripts.Render("~/Scripts/jquery-1.10.2.js")
 
         <script>
             $(document)("click", "#deleteInterchange", function () {
@@ -118,6 +115,16 @@
                 $("#confirmdeleteInterchange #id").val(id);
             });
         </script>
+
+        <script>
+            var jQuery_1_10_2 = $.noConflict(true);
+
+            jQuery_1_10_2(function() {
+                $("#interchanges").DataTable();
+            });
+        </script>
+        
+
     }
 
 
