salva para hacer commint

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -35,7 +35,7 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
-                    <h3 class="texth3">
+                    <h3 class="texth3"><i class="fa fa-cogs" style="font-size:25px;color:#4776a1"></i>
                         @Html.Partial("Sections/ConfigNotification", Model)
                     </h3>
 
