--- a/OctagonPlatform/Views/Disputes/Create.cshtml
+++ b/OctagonPlatform/Views/Disputes/Create.cshtml
@@ -44,16 +44,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TerminalId, "TerminalId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TerminalId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.TerminalId)
+                @Html.HiddenFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.TransactionId, "TransactionId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TransactionId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.TransactionId, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.TransactionId)
+                @Html.HiddenFor(model => model.TransactionId, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
@@ -76,7 +76,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SecuenceNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SecuenceNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.SecuenceNumber)
+                @Html.HiddenFor(model => model.SecuenceNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SecuenceNumber, "", new { @class = "text-danger" })
             </div>
         </div>
