--- a/OctagonPlatform/Views/Disputes/Create.cshtml
+++ b/OctagonPlatform/Views/Disputes/Create.cshtml
@@ -50,10 +50,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TransactionId, "TransactionId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TransacNo, "TransactionId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.TransactionId)
-                @Html.HiddenFor(model => model.TransactionId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.TransacNo)
+                @Html.HiddenFor(model => model.TransacNo, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
